--- a/SingleBoerseNRW/MainWindow.xaml
+++ b/SingleBoerseNRW/MainWindow.xaml
@@ -5,8 +5,76 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SingleBoerseNRW"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Height="600" Width="920"
+        WindowStyle="None"
+        ResizeMode="NoResize"
+        Background="Transparent"
+        AllowsTransparency="True">
 
-    </Grid>
+
+    <Border Background="#272537"
+            CornerRadius="20">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="75"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+
+            <TextBlock Text="SinglebörseNRW"
+                   VerticalAlignment="Center"
+                   HorizontalAlignment="Left"
+                   Foreground="White"
+                   FontSize="22"
+                    Margin="20,0,0,0"/>
+
+            <StackPanel Grid.Row="1">
+                <RadioButton Content="Start"
+                             Height="50"
+                             Foreground="White"
+                             FontSize="14"
+                             Margin="45,0,0,0"
+                             Style="{StaticResource MenuButtonTheme}"/>
+               
+                <RadioButton Content="Anmelden"
+                             Height="50"
+                             Foreground="White"
+                             FontSize="14"
+                             Margin="45,0,0,0"
+                             Style="{StaticResource MenuButtonTheme}"/>
+               
+                 <RadioButton Content="Registrieren"
+                             Height="50"
+                             Foreground="White"
+                             FontSize="14"
+                              Margin="45,0,0,0"
+                             Style="{StaticResource MenuButtonTheme}"/>
+
+            </StackPanel>
+
+            <TextBox Width="250"
+                     Height="40"
+                     VerticalContentAlignment="Center"
+                     HorizontalAlignment="Left"
+                     Margin="5"
+                     Grid.Column="1"
+                     Style="{StaticResource ModernTextbox}"/>
+
+            <ContentControl Grid.Row="1"
+                            Grid.Column="1"
+                            Margin="10"/>
+
+        </Grid>
+
+      
+
+
+    </Border>
+     
+
 </Window>
