--- a/SingleBoerseNRW/App.xaml
+++ b/SingleBoerseNRW/App.xaml
@@ -16,7 +16,11 @@
                 <view:HomeView/>
             </DataTemplate>
             
-            
+            <DataTemplate DataType="{x:Type viewModel:AnmeldenViewModel}">
+                <view:AnmeldenView/>
+            </DataTemplate>
+
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
