--- a/SingleBoerseNRW/MainWindow.xaml
+++ b/SingleBoerseNRW/MainWindow.xaml
@@ -45,22 +45,44 @@
                              Height="50"
                              Foreground="White"
                              FontSize="14"
-                             Margin="45,0,0,0"
-                             Style="{StaticResource MenuButtonTheme}"/>
-               
+                             Margin="35,0,0,0"
+                             Style="{StaticResource MenuButtonTheme}"
+                             IsChecked="True"
+                             Command="{Binding HomeViewCommand}"/>
+                            
+
                 <RadioButton Content="Anmelden"
                              Height="50"
                              Foreground="White"
                              FontSize="14"
-                             Margin="45,0,0,0"
-                             Style="{StaticResource MenuButtonTheme}"/>
-               
+                             Margin="35,0,0,0"
+                             Style="{StaticResource MenuButtonTheme}"
+                             Command="{Binding AnmeldenViewCommand}"/>
+                             
+                
                  <RadioButton Content="Registrieren"
                              Height="50"
                              Foreground="White"
                              FontSize="14"
-                              Margin="45,0,0,0"
+                              Margin="35,0,0,0"
                              Style="{StaticResource MenuButtonTheme}"/>
+                
+                <RadioButton Content="Daten"
+                             Height="50"
+                             Foreground="White"
+                             FontSize="14"
+                              Margin="35,0,0,0"
+                             Style="{StaticResource MenuButtonTheme}"/>
+
+                <Button Content="Beenden" Height="50" Width="160" Foreground="OrangeRed"
+                             FontSize="14"   Margin="2,260,0,2" Click="Button_Click" Background="Orange" >
+                    <Button.Resources>
+                        
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
 
             </StackPanel>
 
