--- a/SingleBoerseNRW/MainWindow.xaml
+++ b/SingleBoerseNRW/MainWindow.xaml
@@ -74,8 +74,8 @@
                               Margin="35,0,0,0"
                              Style="{StaticResource MenuButtonTheme}"/>
 
-                <Button Content="Beenden" Height="50" Width="160" Foreground="OrangeRed"
-                             FontSize="14"   Margin="2,260,0,2" Click="Button_Click" Background="Orange" >
+                <Button Content="Beenden" Height="50" Width="160" Foreground="White"
+                             FontSize="14"   Margin="2,260,0,2" Click="Button_Click" Background="DarkCyan" >
                     <Button.Resources>
                         
                         <Style TargetType="Border">
