--- a/SingleBoerseNRW/MVVM/View/AnmeldenView.xaml
+++ b/SingleBoerseNRW/MVVM/View/AnmeldenView.xaml
@@ -7,19 +7,23 @@
              mc:Ignorable="d" d:DesignWidth="800" Height="492">
     <StackPanel>
         <Grid Width="244">
-            <TextBox Text="Benutzername" TextWrapping="Wrap" Margin="-1,77,2,0" Height="18" VerticalAlignment="Top"/>
-            <TextBox Text="Passwort" TextWrapping="Wrap" Margin="-1,121,0,0" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="243"/>
+            <Grid VerticalAlignment="Top">
+                <TextBox Text="Benutzername" TextWrapping="Wrap" Margin="0,50,1,0" Height="18" VerticalAlignment="Top"/>
+            </Grid>
+            <TextBox Text="Passwort" TextWrapping="Wrap" Margin="-1,131,0,0" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="243"/>
         </Grid>
         <Grid/>
-        <Button Content="Anmelden" Foreground="White"
-                FontSize="14" Background="DarkCyan" RenderTransformOrigin="0.501,1.048" Height="63" Width="288" >
-            <Button.Resources>
+        <Grid>
+            <Button Content="Anmelden" Foreground="White"
+                FontSize="14" Background="DarkCyan" RenderTransformOrigin="0.501,1.048" Margin="50,50,60,50" >
+                <Button.Resources>
 
-                <Style TargetType="{x:Type Border}">
-                    <Setter Property="CornerRadius" Value="5"/>
-                </Style>
-            </Button.Resources>
-        </Button>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+        </Grid>
     </StackPanel>
 
 </UserControl>
