--- a/SingleBoerseNRW/MainWindow.xaml
+++ b/SingleBoerseNRW/MainWindow.xaml
@@ -65,8 +65,9 @@
                              Foreground="White"
                              FontSize="14"
                               Margin="35,0,0,0"
-                             Style="{StaticResource MenuButtonTheme}"/>
-                
+                             Style="{StaticResource MenuButtonTheme}"
+                              Command="{Binding RegistrierenViewCommand}"/>
+
                 <RadioButton Content="Daten"
                              Height="50"
                              Foreground="White"
