--- a/SingleBoerseNRW/MVVM/View/AnmeldenView.xaml
+++ b/SingleBoerseNRW/MVVM/View/AnmeldenView.xaml
@@ -5,26 +5,55 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SingleBoerseNRW.MVVM.View"
              mc:Ignorable="d" d:DesignWidth="800" Height="492">
-    <StackPanel>
-        <Grid Width="244">
-            <Grid VerticalAlignment="Top">
-                <TextBox Text="Benutzername" TextWrapping="Wrap" Margin="0,50,1,0" Height="18" VerticalAlignment="Top"/>
-            </Grid>
-            <TextBox Text="Passwort" TextWrapping="Wrap" Margin="-1,131,0,0" Height="18" VerticalAlignment="Top" HorizontalAlignment="Left" Width="243"/>
-        </Grid>
-        <Grid/>
-        <Grid>
-            <Button Content="Anmelden" Foreground="White"
-                FontSize="14" Background="DarkCyan" RenderTransformOrigin="0.501,1.048" Margin="50,50,60,50" >
-                <Button.Resources>
+    <Grid>
+        <StackPanel Orientation="Vertical" Margin="0,0,0,10">
+            <ScrollViewer Height="492" Width="800">
+                <StackPanel RenderTransformOrigin="0.49,0.488" Height="492" Width="800">
 
-                    <Style TargetType="{x:Type Border}">
-                        <Setter Property="CornerRadius" Value="5"/>
-                    </Style>
-                </Button.Resources>
-            </Button>
-        </Grid>
-    </StackPanel>
+                    <Grid Width="244" Height="157">
+                        <Grid VerticalAlignment="Top">
+                            <TextBox Text="Benutzername" TextWrapping="Wrap" Margin="0,34,1,0" Height="34" VerticalAlignment="Top"/>
+                        </Grid>
+                        <TextBox Text="Passwort" TextWrapping="Wrap" Margin="-1,116,0,0" Height="33" VerticalAlignment="Top" HorizontalAlignment="Left" Width="243"/>
+                    </Grid>
+                    <Grid Height="146">
+                        <Button Content="Anmelden" Foreground="White"
+                            FontSize="14" Background="DarkCyan" RenderTransformOrigin="0.501,1.048" Margin="50,61,60,50" >
+                            <Button.Resources>
+
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="5"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
+                        <Button Content="Registrieren" Foreground="White"
+                            FontSize="14" Background="DarkCyan" RenderTransformOrigin="0.501,1.048" Margin="50,278,60,-167" >
+                            <Button.Resources>
+
+                                <Style TargetType="{x:Type Border}">
+                                    <Setter Property="CornerRadius" Value="5"/>
+                                </Style>
+                            </Button.Resources>
+                        </Button>
+                    </Grid>
+                    <Grid/>
+                    <Grid Width="800">
+                        <Grid Margin="0,5,26,5">
+                            <TextBox Text="Name" TextWrapping="Wrap" Margin="164,14,453,156"/>
+                            <TextBox HorizontalAlignment="Left" Margin="435,14,0,0" Text="Vorname" TextWrapping="Wrap" VerticalAlignment="Top" Width="168" Height="20"/>
+                            <TextBox HorizontalAlignment="Left" Margin="73,72,0,0" Text="Alter" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="23"/>
+                            <TextBox HorizontalAlignment="Left" Margin="258,72,0,0" Text="Wohnort" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="23"/>
+                            <TextBox HorizontalAlignment="Left" Margin="435,72,0,0" Text="Größe" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="23"/>
+                            <TextBox HorizontalAlignment="Left" Margin="618,72,0,0" Text="Geschlecht" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Height="23"/>
+                        </Grid>
+                    </Grid>
+                </StackPanel>
+
+            </ScrollViewer>
+
+        </StackPanel>
+
+    </Grid>
 
 </UserControl>
 
